@@ -1,6 +1,7 @@
 Revision history for Perl extension PGXN-API-Searcher.
 
 0.7.1
+      - Enabled `field:` syntax in search queries.
 
 0.7.0   2011-03-31T20:55:51
       - Augmented the docs a bit.
